# mini-go

./: .gitignore  README.md  docker-compose.yml
engine/: pyproject.toml
engine/goengine/: __init__.py  board.py  eyes.py  game.py  scoring.py  sgf.py  types.py  zobrist.py
engine/tests/: conftest.py  test_board.py  test_dead_stones.py  test_eyes.py  test_rules.py  test_scoring.py  test_sgf.py
inference/: Dockerfile  pyproject.toml  smoke_az.py
inference/app/: __init__.py  main.py  registry.py  uct.py
inference/tests/: test_service.py  test_uct.py
server/: Dockerfile  pyproject.toml
server/app/: __init__.py  bots.py  config.py  db.py  elo.py  main.py  schemas.py  sessions.py
server/tests/: test_api.py
training/: Dockerfile  config.13x13.yaml  config.19x19.yaml  config.9x9.yaml  config.local.yaml  config.smoke.yaml  config.yaml  pyproject.toml  smoke_workers.py
training/azero/: __init__.py  batched_selfplay.py  benchmark.py  bot.py  checkpoint.py  config.py  evaluate.py  features.py  inference_server.py  mcts.py  network.py  plateau.py  rank.py  replay.py  selfplay.py  selfplay_engine.py  serve.py  train.py
training/tests/: test_training.py
web/: Dockerfile  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/game/[id]/: page.tsx
web/components/: Board.tsx
web/lib/: api.ts  useGameSocket.ts
