[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "go-engine"
version = "0.1.0"
description = "Pure-Python Go (Baduk) rules engine: board, captures, superko, Chinese scoring, SGF."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
include = ["goengine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
