[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "go-inference"
version = "0.1.0"
description = "Bot inference service: random, pure-MCTS and AlphaZero-network bots over HTTP."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
nn = ["torch>=2.2", "numpy>=1.26"]
dev = ["pytest>=7.4", "httpx>=0.27"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
